# shopify-product

./: .gitignore  \  a.json  pyproject.toml
shopify_product/: __init__.py  cli.py  config.py  core.py
