[project]
name = "shopify-products"
version = "0.1.0"
description = "A sophisticated package for Shopify products"
authors = [
  { name = "Emran Hossain Sagor", email = "imrans4gor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.0"
license = { text = "GPL-3.0" }

dependencies = [
    "click",
    "pytest"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

keywords = [
	"birthday",
	"day",
	"week day",
]

[project.urls]
Repository = "https://github.com/exeebit/birth-teller"
Issues = "https://github.com/exeebit/birth-teller/issues"
Changelog = "https://github.com/exeebit/birth-teller/blob/main/CHANGELOG.md"

[project.scripts]
shopify-product = "shopify_product.cli:main"

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "isort",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "mypy"
]
